# GutenOCR

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/grounding-bench/: README.md  build.py  sample.py
benchmarks/grounding-bench/diversity/: rank.py
benchmarks/grounding-bench/runs/: v1-pubmed.sh
data/google_vision_ocr/: README.md  __init__.py  google_vision_ocr_extraction.py  requirements.txt
data/grounded_latex/: .gitignore  README.md  cleanup_incomplete.sh  count_success.sh  generate_equations.py  requirements.txt  shard_dataset.py  visualize_bbox.ipynb
data/idl/: README.md  batch_standardize.py  compress.sh  compress_parallel.sh  requirements.txt  standardize.py
data/pubmed/: README.md  __init__.py  download_parallel.sh  format_ocr_json.py  process_pubmed_ocr.py  requirements.txt  retry_failed_ocr.py  visualize_pubmed_ocr.py
data/synthdog_grounding/: .gitignore  LICENSE  README.md  SYNTHDOG-VALIDATION.md  __init__.py  analyze.py  analyze_luminance_threshold.py  annotations.py  check_elastic_distortion.py  constants.py  data_readers.py  extract_corpus.py  fetch_fonts.py  fetch_papers.py  fetch_wikimedia.py  inspect_sample.py  package.py  pillow_compat.py  pyproject.toml  requirements-synthdog.txt  serialization.py  template.py  test_contrast_distribution.py  test_fonts.py
data/synthdog_grounding/config/: config_base.yaml  config_en-pdfs.yaml  config_en.yaml  config_huggingface.yaml  config_ja.yaml  config_ko.yaml  config_zh.yaml
data/synthdog_grounding/data_analysis/: aggregate_stats.py  batch_stats.py  generate_stats.py  simple_batch_process.sh
data/synthdog_grounding/data_extraction/: check_sample.py  extract_finepdfs.py
data/synthdog_grounding/data_generation/: run_synthdog_range.py  run_synthdog_range.sh
data/synthdog_grounding/data_packaging/: build_tar.py  build_tars_parallel.py
data/synthdog_grounding/effects/: physical.py
data/synthdog_grounding/elements/: __init__.py  content.py  document.py  paper.py  readers.py  textbox.py
data/synthdog_grounding/layouts/: __init__.py  _utils.py  grid.py  grid_stack.py  utils.py
data/synthdog_grounding/resources/: README.md
data/synthdog_grounding/resources/background/: backgrounds.yaml
data/synthdog_grounding/resources/corpus/: enwiki.txt
data/synthdog_grounding/resources/font/: fonts.yaml
data/synthdog_grounding/resources/paper/: papers.yaml
data/tabmepp/: LICENSE  README.md  download.sh  requirements.txt  standardize.py  standardize_parquet.py
docs/: roadmap.md
experiments/qwen-multigpu-sft/: README.md  acc.yaml  args.py  ds_zero3.json  prompt_builder.py  pyproject.toml  run.sh  sft_clean.py  split_wds_pairs_tar.py  system_prompt.txt  tasks.csv
experiments/vllm-fox/: README.md  common.py  default_system_prompt.txt  eval_runner.py  fox_eval.py  prompt_extractors.py  requirements_vllm.txt  roots_system_prompt.txt  run_en_box_ocr_eval_vllm.sh  run_en_line_ocr_eval_vllm.sh  run_en_onbox_ocr_eval_vllm.sh  run_en_page_ocr_eval_vllm.sh  vllm_ocr_predictor.py
experiments/vllm-fox/eval_tools/: eval_ocr_test.py  eval_summary_test.py
experiments/vllm-fox/scripts/: chandra_ocr.sh  deepseek_ocr.sh  infinity-parser.sh  nanonets_ocr2_3b.sh  olmocr2.sh  paddleocr_vl_openai.sh  qwen25_vl_3b.sh  qwen25_vl_7b.sh  qwen3_vl_8b.sh  rescore.sh
experiments/vllm-ocr-eval/: README.md  conditional_detection.sh  conditional_detection_score.sh  detection.sh  detection_score.sh  localized_reading.sh  localized_reading_score.sh  pyproject.toml  reading_lines.sh  reading_lines_score.sh  reading_paragraphs.sh  reading_paragraphs_score.sh  reading_text.sh  reading_text_score.sh
scripts/: fix_tied_weights.py
