[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthdog-grounding"
version = "0.1.0"
description = "Synthetic Document Generator with Grounding Annotations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NAVER Corp."},
    {name = "Roots Automation"},
]
keywords = ["ocr", "document", "synthetic", "data generation", "grounding", "bounding boxes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.2.0",
    "synthtiger",
    "numpy<2",
    "datasets",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/Roots-Automation/GutenOCR"
"Bug Tracker" = "https://github.com/Roots-Automation/GutenOCR/issues"

[project.scripts]
synthdog-generate = "data_generation.run_synthdog:main"

[tool.setuptools.packages.find]
include = ["elements*", "layouts*", "data_generation*", "data_packaging*", "data_analysis*", "data_extraction*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
